fixed the left and right spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -59,9 +59,11 @@ body, main, .content {
 }
 
 .page-columns {
+  display: block !important;
   max-width: 100% !important;
   padding: 0 !important;
-  margin: 0 !important;
+  margin-left: 100px !important;
+  margin-right: 100px !important;
 }
 
 main {
